@@ -2,18 +2,35 @@ package org.skypro.skyshop.product;
 
 import org.skypro.skyshop.search.Searchable;
 
+import java.util.Objects;
+
 public abstract class Product implements Searchable {
     private final String name;
 
     public Product(String name) {
-        if (name == null || name.isBlank()) {
-            throw new IllegalArgumentException("Название продукта не может быть пустым или null");
+        if (name == null || name.trim().isEmpty()) {
+            throw new IllegalArgumentException("Название не может быть пустым");
         }
         this.name = name;
     }
-    public abstract int getPrice();
 
+    public abstract int getPrice();
     public abstract boolean isSpecial();
+
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) return true;
+        if (o == null || getClass() != o.getClass()) return false;
+        Product product = (Product) o;
+        return name.equals(product.name);
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hash(name);
+    }
+
+    // Реализация Searchable
     @Override
     public String getSearchTerm() {
         return name;
